2011-02-23 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-04
   * R/binnedplot: pass addition graphical parameters to the function.

2011-02-15 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-03
   * R/sim: fix a bug in sim.glm() when there is only an intercept 
        as a predictor. (discovered by Barnes Benjamin)


2011-02-14 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-02
   * R/bayesglm: fix some dimension issues when NCOL(x.nobs)==1

2011-02-05 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-01
   * R/load.first: lib --> lib.loc in packageDescription

2010-11-20 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-08
    * R/simmer: samples directly from the posterior 
        of the fixed and random effects, given sigma and Sigma

2010-10-24 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-07
    add new methods for sim object, coef, fixef, ranef and sigm.hat

2010-9-24 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-06
    * R/bayesglm: fix a bug when a model of one predictor with no intercept is fitted
    * man/several: CRAN no longer alows genericFunction docType

2010-6-28 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-05
    * R/extractDIC: add s3 methods for extractDIC and extractAIC for the mer class
    * Rd/extractDIC

2010-1-21 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-04
    * R/standardize: add polr method
    * Rd/standardize: change the example code to make M1 and M2 equivalent. 

2010-1-15 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-03
    * R/balanceplot: fix a bug in balance(), take out the intercept

2010-1-11 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-02